@@ -1,8 +1,9 @@
 //
 // Stream.cs
 //
-// Author:
+// Authors:
 //   Jonathan Pryor  <jpryor@novell.com>
+//   Bojan Rajkovic  <bojanr@brandeis.edu>
 //
 // Copyright (c) 2008 Novell, Inc. (http://www.novell.com)
 //
@@ -29,10 +30,137 @@
 using System;
 using System.IO;
 using System.Runtime.InteropServices;
+using System.Text;
 
 namespace Mono.Rocks {
 
 	public static class StreamRocks {
+
+		private static byte[] Take (Stream self, int size)
+		{
+			byte[] buff = new byte [size];
+			int read, offset = 0;
+
+			while ((read = self.Read (buff, offset, buff.Length - offset)) > 0)
+				offset += read;
+
+			return buff;
+		}
+
+		public static Stream Read (this Stream self, out short value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToInt16 (Take (self, 2), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out int value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToInt32 (Take (self, 4), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out long value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToInt64 (Take (self, 8), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out bool value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToBoolean (Take (self, 1), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out double value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToDouble (Take (self, 8), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out char value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToChar (Take (self, 2), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out float value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToSingle (Take (self, 4), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out ushort value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToUInt16(Take (self, 2), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out uint value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToUInt32 (Take (self, 4), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out ulong value)
+		{
+			Check.Self (self);
+
+			value = BitConverter.ToUInt64(Take (self, 8), 0);
+
+			return self;
+		}
+
+		public static Stream Read (this Stream self, out string value, int length, Encoding encoding)
+		{
+			Check.Self (self);
+
+			value = encoding.GetString (Take (self, length));
+
+			return self;
+		}
+
+		public static Stream Read<TValue> (this Stream self, out TValue value)
+		{
+			Check.Self (self);
+
+			byte[] buff = Take (self, Marshal.SizeOf (typeof (TValue)));
+			GCHandle handle = GCHandle.Alloc(buff, GCHandleType.Pinned);
+
+			try { 
+				value = (TValue) Marshal.PtrToStructure (handle.AddrOfPinnedObject (), typeof (TValue)); 
+			} finally {
+				handle.Free();
+			}
+
+			return self;
+		}
 
 		public static Stream Write (this Stream self, bool value)
 		{
